apps/clubs/fraternite-du-piranha/outlinewiki/prod/networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: fraternite-du-piranha-outlinewiki-httpproxy
spec:
  virtualhost:
    fqdn: wiki.fraternite-du-piranha.etsmtl.club
    tls:
      secretName: fraternite-du-piranha-outlinewiki-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: fraternite-du-piranha-outlinewiki-svc
          port: 3000
      timeoutPolicy:
        idle: 600s
        response: 600s
